Added FEKC specific content

--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@
           <li><a href="#features">Features</a></li>
           <li><a href="#why">why</a></li>
           <li><a href="#screenshot">Screenshots</a></li>
-          <li><a href="#testimonial">Testimonial</a></li>
           <li><a href="#clients">contract</a></li>
         </ul>
         <button class="close-button" id="close-button">Close Menu</button>
@@ -46,7 +45,7 @@
             <div class="navbar navbar-inverse sticky-navigation navbar-fixed-top" role="navigation" data-spy="affix" data-offset-top="200">
               <div class="container">
                 <div class="navbar-header">
-                  <a class="logo-left " href="index.html"><i class="mdi-image-timelapse"></i>F E K C</a>
+                  <a class="logo-left " href="index.html">F E K C</a>
                 </div>
                 <div class="navbar-right">
                   <button class="menu-icon"  id="open-button">
@@ -78,9 +77,9 @@
                 <i class="mdi-action-settings"></i>
               </div>
               <div class="features-text">
-                <h4>Built-with Bootstrap 3.5.x</h4>
+                <h4>Built for Android 5.0+</h4>
                 <p>
-                  Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard.
+                  Our quest with F E K C was to reach out to as many people as possible and yet incorporate the latest features.
                 </p>
               </div>
              </div>
@@ -95,7 +94,7 @@
               <div class="features-text">
                 <h4>Material Design</h4>
                 <p>
-                  Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard.
+                  To keep the useage of the app easy we tried to stick to material design guidelines as far as possible.
                 </p>
               </div>
             </div>
@@ -107,9 +106,9 @@
                 <i class="mdi-image-blur-linear"></i>
               </div>
               <div class="features-text">
-                <h4>Clean and Refreshing</h4>
+                <h4>Challenging and Refreshing</h4>
                 <p>
-                  Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard.
+                  Helps you break your phone addictions in a unique manner where you can involve your closest friends.
                 </p>
               </div>
             </div>
@@ -122,9 +121,9 @@
                 <i class="mdi-communication-business"></i>
               </div>
               <div class="features-text">
-                <h4>Ready for Business or App</h4>
+                <h4>Built with the user as focus</h4>
                 <p>
-                  Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard.
+                  The app was built after multiple rounds of user studies to comply with the needs of the user.
                 </p>
               </div>
             </div>
@@ -139,7 +138,7 @@
               <div class="features-text">
                 <h4>Crafted with Love</h4>
                 <p>
-                  Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard.
+                  All of us in F E K C team have put our blood and sweat into building this application.
                 </p>
               </div>
             </div>
@@ -173,19 +172,17 @@
 
           <div class="col-md-6 col-sm-6 wow fadeInLeft" data-wow-duration="1000ms" data-wow-delay="300ms">
             <div class="pull-left content">
-              <h2>This is Why You Will <br> Love Pluto</h2>
+              <h2>This is Why You Will <br> Love F E K C</h2>
               <p>
-                Material UI Bootstrap APP and Business Template orem ipsum <br>
-                dolor sit amet, consectetur adipIusto quisquam idodit dolore inventore <br>
-                eumetur adipIusto quisquam idodit dolore inventore eum'
-                dolor sit amet, consectetur adipIusto quisquam idodit dolore inventore <br>
-              </p>
+                  We found that a lot of individuals tend to exploit the use of mobile applications, and this exploitation
+                  can usually be not desirable in the day to day behavior that we exhibit. We plan to tackle such addictive behavior
+                  to mobile applications via FEKC, the application that pushes you towards a healthier phone usage pattern.  </p>
               <ul class="list-item">
-                <li><i class="mdi-action-done"></i>OffCanvas Menu</li>
+                <li><i class="mdi-action-done"></i>Block selected apps</li>
                 <li><i class="mdi-action-done"></i>Based on Material design</li>
-                <li><i class="mdi-action-done"></i>Free to Use</li>
-                <li><i class="mdi-action-done"></i>Built-with Bootstrap 3.5.x</li>
-                <li><i class="mdi-action-done"></i>Refreshing Designß</li>
+                <li><i class="mdi-action-done"></i>Get personalized stats</li>
+                <li><i class="mdi-action-done"></i>Let your frineds help you in your quest!</li>
+                <li><i class="mdi-action-done"></i>Set personalized messages</li>
               </ul>
               <a href="javascript:void(0)" class="btn btn-lg btn-primary">Downoad Now!</a>
             </div>
@@ -312,12 +309,6 @@
               <figcaption>
                 <div class="heading">
                   <h3>Screenshot 1</h3>
-                  <p>
-                    MATERIAL UI BOOTSTRAP APP AND BUSINESS TEMPLATE
-                  </p>
-                </div>
-                <div class="icon">
-                  <i class="mdi-content-add-circle-outline"></i>
                 </div>
               </figcaption>
             </figure>
@@ -330,12 +321,6 @@
               <figcaption>
                 <div class="heading">
                   <h3>Screenshot 2</h3>
-                  <p>
-                    MATERIAL UI BOOTSTRAP APP AND BUSINESS TEMPLATE
-                  </p>
-                </div>
-                <div class="icon">
-                  <i class="mdi-content-add-circle-outline"></i>
                 </div>
               </figcaption>
             </figure>
@@ -348,12 +333,6 @@
               <figcaption>
                 <div class="heading">
                   <h3>Screenshot 3</h3>
-                  <p>
-                    MATERIAL UI BOOTSTRAP APP AND BUSINESS TEMPLATE
-                  </p>
-                </div>
-                <div class="icon">
-                  <i class="mdi-content-add-circle-outline"></i>
                 </div>
               </figcaption>
             </figure>
@@ -366,12 +345,6 @@
               <figcaption>
                 <div class="heading">
                   <h3>Screenshot 4</h3>
-                  <p>
-                    MATERIAL UI BOOTSTRAP APP AND BUSINESS TEMPLATE
-                  </p>
-                </div>
-                <div class="icon">
-                  <i class="mdi-content-add-circle-outline"></i>
                 </div>
               </figcaption>
             </figure>
@@ -384,12 +357,6 @@
               <figcaption>
                 <div class="heading">
                   <h3>Screenshot 5</h3>
-                  <p>
-                    MATERIAL UI BOOTSTRAP APP AND BUSINESS TEMPLATE
-                  </p>
-                </div>
-                <div class="icon">
-                  <i class="mdi-content-add-circle-outline"></i>
                 </div>
               </figcaption>
             </figure>
@@ -402,12 +369,6 @@
               <figcaption>
                 <div class="heading">
                   <h3>Screenshot 6</h3>
-                  <p>
-                    MATERIAL UI BOOTSTRAP APP AND BUSINESS TEMPLATE
-                  </p>
-                </div>
-                <div class="icon">
-                  <i class="mdi-content-add-circle-outline"></i>
                 </div>
               </figcaption>
             </figure>
@@ -501,137 +462,6 @@
     </section>
 
 
-    <section id="testimonial" class="section">
-      <div class="container">
-        <div class="section-header text-center wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="400ms">
-          <h1 class="section-title">What People Says</h1>
-          <h2 class="section-subtitle">Material UI Bootstrap APP and Business Template</h2>
-        </div>
-        <div class="row">
-          <div class="col-sm-8 col-sm-offset-2 wow fadeInUp" data-wow-duration="1000ms" data-wow-delay="400ms">
-            <div id="testimonial-carousel" class="carousel slide" data-ride="carousel">
-              <!-- Indicators -->
-              <ol class="carousel-indicators">
-                <li data-target="#testimonial-carousel" data-slide-to="0" class="active"></li>
-                <li data-target="#testimonial-carousel" data-slide-to="1"></li>
-                <li data-target="#testimonial-carousel" data-slide-to="2"></li>
-              </ol>
-              <div class="carousel-inner">
-                <div class="item active text-center">
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud</p>
-                  <div class="meta">
-                    <p>Web excutive <span><a href="http://wingthemes.com/">WingThemes</a></span></p>
-                  </div>
-                </div>
-                <div class="item text-center">
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud</p>
-                  <div class="meta">
-                    <p>Web excutive <span><a href="http://graygrids.com/">GrayGrids</a></span></p>
-                  </div>
-                </div>
-                <div class="item text-center">
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud</p>
-                  <div class="meta">
-                    <p>Web excutive <span><a href="http://landingbow.com/">LandinBow</a></span></p>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-
-    <section id="counter" class="section">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-3 col-sm-6 col-xs-12 wow fadeInLeft" data-wow-duration="1000ms" data-wow-delay="300ms">
-            <div class="counter-item">
-              <div class="icon">
-                <i class="mdi-action-get-app"></i>
-              </div>
-              <h3 class="timer">39000</h3>
-              <hr>
-              <h5>
-                Free Downloads
-              </h5>
-            </div>
-          </div>
-          <div class="col-md-3 col-sm-6 col-xs-12 wow fadeInLeft" data-wow-duration="1000ms" data-wow-delay="500ms">
-            <div class="counter-item">
-              <div class="icon">
-                <i class="mdi-action-face-unlock"></i>
-              </div>
-              <h3 class="timer">1046</h3>
-              <hr>
-              <h5>
-                Premium Users
-              </h5>
-            </div>
-          </div>
-          <div class="col-md-3 col-sm-6 col-xs-12 wow fadeInRight" data-wow-duration="1000ms" data-wow-delay="700ms">
-            <div class="counter-item">
-              <div class="icon">
-                <i class="mdi-action-grade"></i>
-              </div>
-              <h3 class="timer">6345</h3>
-              <hr>
-              <h5>
-                Five Start Reviews
-              </h5>
-            </div>
-          </div>
-          <div class="col-md-3 col-sm-6 col-xs-12 wow fadeInRight" data-wow-duration="1000ms" data-wow-delay="900ms">
-            <div class="counter-item">
-              <div class="icon">
-                <i class="mdi-action-trending-up"></i>
-              </div>
-              <h3 class="timer">18325</h3>
-              <hr>
-              <h5>
-                Active Installs
-              </h5>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-
-    <section id="clients" class="section">
-      <div class="container">
-
-        <div class="section-header text-center">
-          <h1 class="section-title wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">Featured on</h1>
-          <h2 class="section-subtitle wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">Material UI Bootstrap APP and Business Template</h2>
-        </div>
-        <div class="row">
-          <div class="col-md-3 col-sm-3 wow fadeInUp" data-wow-duration="1000ms" data-wow-delay="300ms">
-            <div class="client-item-wrapper">
-              <img src="img/clients/img1.png" alt="">
-            </div>
-          </div>
-          <div class="col-md-3 col-sm-3 wow fadeInUp" data-wow-duration="1000ms" data-wow-delay="500ms">
-            <div class="client-item-wrapper">
-              <img src="img/clients/img2.png" alt="">
-            </div>
-          </div>
-          <div class="col-md-3 col-sm-3 wow fadeInUp" data-wow-duration="1000ms" data-wow-delay="700ms">
-            <div class="client-item-wrapper">
-              <img src="img/clients/img3.png" alt="">
-            </div>
-          </div>
-          <div class="col-md-3 col-sm-3 wow fadeInUp" data-wow-duration="1000ms" data-wow-delay="900ms">
-            <div class="client-item-wrapper">
-              <img src="img/clients/img4.png" alt="">
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-
     <section id="contact">
       <div class="container">
         <div class="row">
@@ -644,7 +474,7 @@
                     <i class="mdi-maps-map"></i>
                   </div>
                   <h4>Location</h4>
-                  <p>NSW, Sydney, Australia</p>
+                  <p>IIIT, Okhla Phase 3, Delhi</p>
                 </div>
               </div>
               <div class="col-md-6 col-sm-6">
@@ -653,7 +483,7 @@
                     <i class="mdi-content-mail"></i>
                   </div>
                   <h4>Email</h4>
-                  <p>office@graygrids.com</p>
+                  <p>udayan12167@iiitd.ac.in</p>
                 </div>
               </div>
               <div class="clear"></div>
@@ -663,7 +493,7 @@
                     <i class="mdi-action-settings-phone"></i>
                   </div>
                   <h4>Phone Number</h4>
-                  <p>0753 016 572</p>
+                  <p>+91 9999267017</p>
                 </div>
               </div>
               <div class="col-md-6 col-sm-6">
@@ -672,95 +502,16 @@
                     <i class="mdi-action-thumb-up"></i>
                   </div>
                   <h4>Social Media</h4>
-                  <p>@GrayGrids</p>
+                  <p>@F E K C</p>
                 </div>
               </div>
             </div>
-          </div>
-          <div class="col-md-6 wow fadeInRight" data-wow-duration="1000ms" data-wow-delay="300ms">
-            <h2 class="section-title">Love to Hear From You</h2>
-            <!-- Form -->
-            <form class="contact-form" role="form" method="post">
-              <i class="mdi-action-account-box"></i>
-              <input type="text" class="form-control" name="name" placeholder="Name">
-
-              <i class="mdi-content-mail"></i>
-              <input type="email" class="form-control" name="EMAIL" placeholder="Email">
-
-              <textarea class="form-control" placeholder="Message" rows="4"></textarea>
-              <button type="submit" id="submit" class="btn btn-lg btn-primary">Send Massage</button>
-              <div id="success" style="color:#3F51B5;">
-              </div>
-            </form>
           </div>
         </div>
       </div>
     </section>
 
-    <div class="map-area">
-      <div class="map">
-<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6853.31334931688!2d149.5710983929677!3d-33.43399308961885!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0000000000000000%3A0x63680231a1016da2!2sWestern+Region+Academy+of+Sport!5e0!3m2!1sen!2sbd!4v1436826340086" width="100%" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
-       </div>
-    </div>
-
     <section id="footer">
-      <div class="container">
-        <div class="container">
-          <div class="row">
-            <div class="col-md-3 col-sm-6 col-xs-12">
-              <h3>Products</h3>
-              <ul>
-                <li><a href="http://wingthemes.com/">WingThemes</a>
-                </li>
-                <li><a href="http://graygrids.com/">Graygrids</a>
-                </li>
-                <li><a href="http://wpbean.com/">WPBean</a>
-                </li>
-                <li><a href="http://landingbow.com/">Landingbow</a>
-                </li>
-                <li><a href="http://freebiescircle.com/">FreebiesCicle</a>
-                </li>
-              </ul>
-            </div>
-            <div class="col-md-3 col-sm-6 col-xs-12">
-              <h3>FAQs</h3>
-              <ul>
-                <li><a href="#">Why choose us?</a>
-                </li>
-                <li><a href="#">Where we are?</a>
-                </li>
-                <li><a href="#">Fees</a>
-                </li>
-                <li><a href="#">Guarantee</a>
-                </li>
-                <li><a href="#">Discount</a>
-                </li>
-              </ul>
-            </div>
-            <div class="col-md-3 col-sm-6 col-xs-12">
-              <h3>About</h3>
-              <ul>
-                <li><a href="#">Career</a>
-                </li>
-                <li><a href="#">Partners</a>
-                </li>
-                <li><a href="#">Team</a>
-                </li>
-                <li><a href="#">Clients</a>
-                </li>
-                <li><a href="#">Contact</a>
-                </li>
-              </ul>
-            </div>
-            <div class="col-md-3 col-sm-6 col-xs-12">
-              <h3>Find us on</h3>
-              <a class="social" href="#" target="_blank"><i class="fa fa-facebook"></i></a>
-              <a class="social" href="#" target="_blank"><i class="fa fa-twitter"></i></a>
-              <a class="social" href="#" target="_blank"><i class="fa fa-google-plus"></i></a>
-            </div>
-          </div>
-        </div>
-      </div>
       <!-- Go to Top Link -->
       <a href="#home" class="btn btn-primary back-to-top">
       <i class=" mdi-hardware-keyboard-arrow-up"></i>
@@ -772,10 +523,7 @@
         <div class="row">
           <div class="col-md-12">
             <p class="copyright-text">
-             © Pluto 2015 All right reserved. Designed and Developed by
-              <a href="http://graygrids.com/">
-                GrayGrids
-              </a>
+             F E K C
             </p>
           </div>
         </div>
