Final content added

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <li><a href="#features">Features</a></li>
           <li><a href="#why">why</a></li>
           <li><a href="#screenshot">Screenshots</a></li>
-          <li><a href="#clients">contract</a></li>
+          <li><a href="#contact">contact</a></li>
         </ul>
         <button class="close-button" id="close-button">Close Menu</button>
     </div>
@@ -57,7 +57,6 @@
         </div>
         <div class="contents text-right">
           <h1 class="wow fadeInRight" data-wow-duration="1000ms" data-wow-delay="300ms">F E K C - Push Yourself</h1>
-          <p class="wow fadeInRight" data-wow-duration="1000ms" data-wow-delay="400ms">Material Design Inspired HTML5 Bootstrap Template for Business and App</p>
           <a href="#why" class="btn btn-lg btn-primary wow fadeInUp" data-wow-duration="1000ms" data-wow-delay="400ms">Download</a>
           <a href="#features" class="btn btn-lg btn-border wow fadeInUp" data-wow-duration="1000ms" data-wow-delay="500ms">Learn More</a>
         </div>
@@ -184,7 +183,7 @@
                 <li><i class="mdi-action-done"></i>Let your frineds help you in your quest!</li>
                 <li><i class="mdi-action-done"></i>Set personalized messages</li>
               </ul>
-              <a href="javascript:void(0)" class="btn btn-lg btn-primary">Downoad Now!</a>
+              <a href="https://drive.google.com/file/d/0B-302-vdV0lgdlNBa19kTlVlRHc/view?usp=sharing" class="btn btn-lg btn-primary">Downoad Now!</a>
             </div>
           </div>
         </div>
@@ -200,7 +199,7 @@
               <h3 class="title-small">
                 Get a personalized warning to help you in your quest.
               </h3>
-              <p>
+              <p style="font-size:160%;">
                 Once you create a task to block some apps you will get a personalized warning to deter you from accesing that app. This warning will also contain personalized messages from your friends so that it helps you motivate to follow your challenge.
               </p>
             </div>
@@ -227,17 +226,10 @@
           <div class="col-md-8 col-sm-8 wow fadeInRight" data-wow-duration="1000ms" data-wow-delay="300ms">
             <div class="feature-item">
               <h3 class="title-small">
-                
+                Get comprehensive statistics
               </h3>
-              <p>
-                Lorem Ipsum is simply dummy text of the printing and typesetting industry.  Lorem Ipsum has been the industry's
-                standard dummy text ever since the1500s, when an unknown printer took a galley of type and scrambled it to
-                make a type specimen book. It has survived not only five centuries, but also the leap into electronicstandard
-                dummy text ever since the1500s, when an unknown printer took a galley of type and scrambled it to
-                make a type specimen book. It has survived not only five centuries, but also the leap into electronic
-              </p>
-              <p>
-                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book
+              <p style="font-size:160%;">
+                Get statistics for how many wins or successed you scored and failures. Get statistics on per task basis which helps you keep track of how well you are progressing.
               </p>
             </div>
           </div>
@@ -254,17 +246,10 @@
           <div class="col-md-8 col-sm-8 wow fadeInLeft" data-wow-duration="1000ms" data-wow-delay="300ms">
             <div class="feature-item">
               <h3 class="title-small">
-                Start a Well-controlled Day!
+                Join the app with Facebook!
               </h3>
-              <p>
-                Lorem Ipsum is simply dummy text of the printing and typesetting industry.  Lorem Ipsum has been the industry's
-                standard dummy text, when an unknown printer took a galley of type and scrambled it to
-                make a type specimen book. It has survived not only five centuries, but also the leap into electronicstandard
-                dummy text ever since the1500s, when an unknown printer took a galley of type and scrambled it to
-                make a type specimen book. It has survived not only five centuries, but also the leap into electronic
-              </p>
-              <p>
-                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book
+              <p style="font-size:160%;">
+                No need to go through complicated signup procedures. Login with facebook and start challenging yourself.
               </p>
             </div>
           </div>
@@ -282,7 +267,7 @@
       <div class="container">
         <div class="row text-center">
             <h3 class="title-small wow bounce" data-wow-duration="1000ms" data-wow-delay="300ms">Join Us Today and Change Yourself</h3>
-             <a href="javascript:void(0)" class="btn btn-lg btn-border">Sign Up</a>
+             <a href="https://drive.google.com/file/d/0B3NyWIWJZUpZSU1oRnc5WGtQSVE/view?usp=sharing" class="btn btn-lg btn-border">Sign Up</a>
           </div>
       </div>
     </section>
@@ -291,7 +276,7 @@
       <div class="container">
         <div class="section-header">
           <h1 class="section-title wow fadeInRight" data-wow-duration="1000ms" data-wow-delay="300ms">Screenshots</h1>
-          <h2 class="section-subtitle wow fadeInRight" data-wow-duration="1000ms" data-wow-delay="400ms">Material UI Bootstrap APP and Business Template</h2>
+          <h2 class="section-subtitle wow fadeInRight" data-wow-duration="1000ms" data-wow-delay="400ms">Check em out!</h2>
         </div>
       </div>
       <div class="row" style="margin:0; padding:0;">
@@ -392,6 +377,10 @@
                     <i class="mdi-content-mail"></i>
                   </div>
                   <h4>Email</h4>
+                  <p>mayank13059@iiitd.ac.in</p>
+                  <p>mrinal12062@iiitd.ac.in</p>
+                  <p>shiv12095@iiitd.ac.in</p>
+                  <p>shuktika12163@iiitd.ac.in</p>
                   <p>udayan12167@iiitd.ac.in</p>
                 </div>
               </div>
