Minor Fixes and remove Menu and Nav

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
   <body>
 
-    <div class="navbar navbar-invers menu-wrap">
+<!--     <div class="navbar navbar-invers menu-wrap">
       <div class="navbar-header text-center">
         <a class="navbar-brand logo-right" href="javascript:void(0)">F E K C</a>
       </div>
@@ -34,13 +34,13 @@
           <li><a href="#contact">contact</a></li>
         </ul>
         <button class="close-button" id="close-button">Close Menu</button>
-    </div>
+    </div> -->
 
   	<div class="content-wrap">
      <header class="hero-area" id="home">
 
       <div class="container">
-          <div class="col-md-12">
+          <!-- <div class="col-md-12">
 
             <div class="navbar navbar-inverse sticky-navigation navbar-fixed-top" role="navigation" data-spy="affix" data-offset-top="200">
               <div class="container">
@@ -54,19 +54,19 @@
                 </div>
               </div>
             </div>
-        </div>
+        </div> -->
         <div class="contents text-right">
           <h1 class="wow fadeInRight" data-wow-duration="1000ms" data-wow-delay="300ms">F E K C - Push Yourself</h1>
-          <a href="#why" class="btn btn-lg btn-primary wow fadeInUp" data-wow-duration="1000ms" data-wow-delay="400ms">Download</a>
+          <a href="#why" class="btn btn-lg btn-border wow fadeInUp" data-wow-duration="1000ms" data-wow-delay="400ms">Download</a>
           <a href="#features" class="btn btn-lg btn-border wow fadeInUp" data-wow-duration="1000ms" data-wow-delay="500ms">Learn More</a>
         </div>
     </header>
 
-    <section id="features" class="section">
+    <section id="features" class="section main-feature-gray">
       <div class="container">
         <div class="section-header">
           <h1 class="section-title wow fadeInRight" data-wow-duration="1000ms" data-wow-delay="100ms">App Features</h1>
-          <h2 class="section-subtitle wow fadeInRight" data-wow-duration="1000ms" data-wow-delay="400ms">Who seeks after it and wants to have it</h2>
+          <!-- <h2 class="section-subtitle wow fadeInRight" data-wow-duration="1000ms" data-wow-delay="400ms">Who seeks after it and wants to have it</h2> -->
         </div>
         <div class="row">
 
@@ -114,7 +114,7 @@
           </div>
 
 
-          <div class="col-md-4 col-sm-6 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="650ms">
+          <div class="col-md-4 col-sm-6 wow fadeInDown col-md-offset-2" data-wow-duration="1000ms" data-wow-delay="650ms">
             <div class="features">
               <div class="icon">
                 <i class="mdi-communication-business"></i>
@@ -143,7 +143,7 @@
             </div>
           </div>
 
-          <div class="col-md-4 col-sm-6 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="850ms">
+          <!-- <div class="col-md-4 col-sm-6 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="850ms">
             <div class="features">
               <div class="icon">
                 <i class="mdi-hardware-phonelink"></i>
@@ -155,7 +155,7 @@
                 </p>
               </div>
             </div>
-          </div>
+          </div> -->
         </div>
       </div>
     </section>
@@ -165,13 +165,13 @@
 
         <div class="row">
 
-          <div class="col-md-6 col-sm-6 wow fadeInRight" data-wow-duration="1000ms" data-wow-delay="300ms">
+          <div class="col-md-4 col-sm-6 wow fadeInRight" data-wow-duration="1000ms" data-wow-delay="300ms">
             <img src="img/features/img1.png" alt="">
           </div>
 
-          <div class="col-md-6 col-sm-6 wow fadeInLeft" data-wow-duration="1000ms" data-wow-delay="300ms">
+          <div class="col-md-8 col-sm-6 wow fadeInLeft" data-wow-duration="1000ms" data-wow-delay="300ms">
             <div class="pull-left content">
-              <h2>This is Why You Will <br> Love F E K C</h2>
+              <h2>This is Why You Will Love F E K C</h2>
               <p>
                   We found that a lot of individuals tend to exploit the use of mobile applications, and this exploitation
                   can usually be not desirable in the day to day behavior that we exhibit. We plan to tackle such addictive behavior
@@ -180,10 +180,10 @@
                 <li><i class="mdi-action-done"></i>Block selected apps</li>
                 <li><i class="mdi-action-done"></i>Based on Material design</li>
                 <li><i class="mdi-action-done"></i>Get personalized stats</li>
-                <li><i class="mdi-action-done"></i>Let your frineds help you in your quest!</li>
+                <li><i class="mdi-action-done"></i>Let your friends help you in your quest!</li>
                 <li><i class="mdi-action-done"></i>Set personalized messages</li>
               </ul>
-              <a href="https://drive.google.com/file/d/0B-302-vdV0lgdlNBa19kTlVlRHc/view?usp=sharing" class="btn btn-lg btn-primary">Downoad Now!</a>
+              <a href="https://drive.google.com/file/d/0B-302-vdV0lgdlNBa19kTlVlRHc/view?usp=sharing" class="btn btn-lg btn-border">Download Now!</a>
             </div>
           </div>
         </div>
@@ -197,7 +197,7 @@
           <div class="col-md-8 col-sm-8 wow fadeInLeft" data-wow-duration="1000ms" data-wow-delay="300ms">
             <div class="feature-item">
               <h3 class="title-small">
-                Get a personalized warning to help you in your quest.
+                Get a Personalised Warning
               </h3>
               <p style="font-size:160%;">
                 Once you create a task to block some apps you will get a personalized warning to deter you from accesing that app. This warning will also contain personalized messages from your friends so that it helps you motivate to follow your challenge.
@@ -226,7 +226,7 @@
           <div class="col-md-8 col-sm-8 wow fadeInRight" data-wow-duration="1000ms" data-wow-delay="300ms">
             <div class="feature-item">
               <h3 class="title-small">
-                Get comprehensive statistics
+                Comprehensive Statistics Monitoring
               </h3>
               <p style="font-size:160%;">
                 Get statistics for how many wins or successed you scored and failures. Get statistics on per task basis which helps you keep track of how well you are progressing.
@@ -263,20 +263,20 @@
       </div>
     </section>
 
-    <section id="cta">
+    <section id="cta" style="padding-bottom: 0;">
       <div class="container">
         <div class="row text-center">
             <h3 class="title-small wow bounce" data-wow-duration="1000ms" data-wow-delay="300ms">Join Us Today and Change Yourself</h3>
-             <a href="https://drive.google.com/file/d/0B3NyWIWJZUpZSU1oRnc5WGtQSVE/view?usp=sharing" class="btn btn-lg btn-border">Sign Up</a>
+             <a href="https://drive.google.com/file/d/0B3NyWIWJZUpZSU1oRnc5WGtQSVE/view?usp=sharing" class="btn btn-lg btn-border">Sign Up for the App!</a>
           </div>
       </div>
     </section>
 
-    <section id="screenshot" class="section">
+    <section id="screenshot" class="section" style="padding-bottom: 0;">
       <div class="container">
         <div class="section-header">
           <h1 class="section-title wow fadeInRight" data-wow-duration="1000ms" data-wow-delay="300ms">Screenshots</h1>
-          <h2 class="section-subtitle wow fadeInRight" data-wow-duration="1000ms" data-wow-delay="400ms">Check em out!</h2>
+          <!-- <h2 class="section-subtitle wow fadeInRight" data-wow-duration="1000ms" data-wow-delay="400ms">Check em out!</h2> -->
         </div>
       </div>
       <div class="row" style="margin:0; padding:0;">
@@ -359,10 +359,10 @@
     <section id="contact">
       <div class="container">
         <div class="row">
-          <div class="col-md-6 wow fadeInLeft" data-wow-duration="1000ms" data-wow-delay="300ms">
+          <div class="col-md-12 wow fadeInLeft" data-wow-duration="1000ms" data-wow-delay="300ms">
             <h2 class="section-title">That's Where We Are</h2>
             <div class="row">
-              <div class="col-md-6 col-sm-6">
+              <div class="col-md-3 col-sm-6">
                 <div class="info">
                   <div class="icon">
                     <i class="mdi-maps-map"></i>
@@ -371,7 +371,7 @@
                   <p>IIIT, Okhla Phase 3, Delhi</p>
                 </div>
               </div>
-              <div class="col-md-6 col-sm-6">
+              <div class="col-md-3 col-sm-6">
                 <div class="info">
                   <div class="icon">
                     <i class="mdi-content-mail"></i>
@@ -384,8 +384,8 @@
                   <p>udayan12167@iiitd.ac.in</p>
                 </div>
               </div>
-              <div class="clear"></div>
-              <div class="col-md-6 col-sm-6">
+              <!-- <div class="clear"></div> -->
+              <div class="col-md-3 col-sm-6">
                 <div class="info">
                   <div class="icon">
                     <i class="mdi-action-settings-phone"></i>
@@ -394,13 +394,13 @@
                   <p>+91 9999267017</p>
                 </div>
               </div>
-              <div class="col-md-6 col-sm-6">
+              <div class="col-md-3 col-sm-6">
                 <div class="info">
                   <div class="icon">
                     <i class="mdi-action-thumb-up"></i>
                   </div>
                   <h4>Social Media</h4>
-                  <p>@F E K C</p>
+                  <p>@mnkvachher (Twitter)</p>
                 </div>
               </div>
             </div>
@@ -410,7 +410,6 @@
     </section>
 
     <section id="footer">
-      <!-- Go to Top Link -->
       <a href="#home" class="btn btn-primary back-to-top">
       <i class=" mdi-hardware-keyboard-arrow-up"></i>
       </a>
