--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
   	<meta charset="utf-8">
     <meta name="description" content="Efficacy: The ability to produce a desired or intended result.">
-    <meta name="keywords" content="Bootstrap, Landing page, Template, Registration, Landing">
+    <meta name="keywords" content="F E K C, Push Yourself">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta name="author" content="Team F E K C">
 		<title>F E K C - Push Yourself</title>
